dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(elr, 0.5.2)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AC_HEADER_STDC

AM_PATH_CPPUNIT(1.8.0)
AM_CONDITIONAL(HAVE_CPPUNIT, test "$CPPUNIT_LIBS")

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=elr
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE(GETTEXT_PACKAGE,"GETTEXT_PACKAGE", [Gettext package])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_SUBST( CFLAGS, '-g3' )

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
test/Makefile
])

